--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </h2>
           <h3>Somente para Computadores</h3>
           <div class="botoes">
-            <a href="">Baixar</a>
+            <a href="http://instant-eyedropper.com/download/instant-eyedropper-2.0.0.exe">Baixar</a>
           </div>
         </div>
         <video src="./videos/eyedropper.mp4" controls></video>
