--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </h2>
           <h3>Somente para Computadores</h3>
           <div class="botoes">
-            <a href="http://instant-eyedropper.com/download/instant-eyedropper-2.0.0.exe">Baixar</a>
+            <a href="https://download1322.mediafire.com/3jg180oq3i3g8n9Aqmzwci9sUCeDFmqZP1NZhPCqDuATWZb05e5Wzm3lX76yI8C7fBpi-dBzudajmoGaWvR9Nd2f69pm7AoWN6u_ygAvnoHFHc6iyRuWCeVf_cESDxzn3pA2793nrqVBtHLYnsGJAHUDef_FXlOkNVznOeuG88LMTRc/1l06353hiu4f3ib/instant-eyedropper-2.0.0.exe">Baixar</a>
           </div>
         </div>
         <video src="./videos/eyedropper.mp4" controls></video>
